// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TelephoneText /> should render the Telephone Text 1`] = `
<span>
  <span>
    <Emoji
      emoji="flag-au"
      type="body"
    />
    <styled.span>
       AU
    </styled.span>
    <span>
       (+61) 
    </span>
  </span>
  412 341 234
</span>
`;

exports[`<TelephoneText /> should render the Telephone Text with flag type 1`] = `
<span>
  <span>
    <Emoji
      emoji="flag-au"
      type="small"
    />
    <styled.span>
       AU
    </styled.span>
    <span>
       (+61) 
    </span>
  </span>
  412 341 234
</span>
`;

exports[`<TelephoneText /> should render the Telephone Text without prefix 1`] = `
<span>
  +61412341234
</span>
`;
